--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Portfolio</title>
+  <title>Document</title>
 </head>
 
 <body>
@@ -47,6 +47,13 @@
           <img src="proyecto-4.png" alt="proyecto-4">
           <p class="title">
             PAGINA DE DOCUMENTACION
+          </p>
+        </a>
+
+        <a href="https://isaaccornejo.github.io/maquetacion-6/" class="project" target="_blank">
+          <img src="proyecto-6.png" alt="proyecto-6">
+          <p class="title">
+            PAGINA DE MASTER EN CSS
           </p>
         </a>
       </article>
